# tiny_thread_pool

./: meson.build
src/: tiny_thread_pool.cpp  tiny_thread_pool.hpp
tests/: test_tiny_thread_pool.cpp
